--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,7 +1,7 @@
+@model MoonlightShadow.ViewModels.Category.CategoryViewModel;
 @{
     ViewData["Title"] = ViewBag.Category;
 }
-
 
 @await Html.PartialAsync("~/Views/Product/ProductModals/ConfirmAddToCartModal.cshtml")
 
